--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
                 android:orientation="vertical"
                 android:background="@android:color/white">
 
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
@@ -35,122 +36,171 @@
                     android:textSize="58dp"
                     android:gravity="center"/>
 
-                <TextView
-                    android:id="@+id/fracturetitle"
-                    android:layout_width="match_parent"
-                    android:background="@drawable/red_border_top"
-                    android:layout_height="wrap_content"
-                    android:text="Fractures"
 
-                    android:textSize="35sp"
-                    android:textStyle="bold"
-                    android:textColor="#c60000"/>
-                <TextView
-                    android:id="@+id/fracturedescription"
+                <RelativeLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
-                    android:text="- For broken arms, legs and other bones\n- How to treat the wound and hold it in place"
-                    android:textSize="16sp"
-                    android:textStyle="italic"
-                    android:textColor="#000000"/>
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/fracturetitle"
+                        android:layout_width="match_parent"
+                        android:background="@drawable/red_border_top"
+                        android:layout_height="wrap_content"
+                        android:text="Fractures"
+                        android:textSize="35sp"
+                        android:textStyle="bold"
+                        android:textColor="#c60000"/>
+
+                    <TextView
+                        android:id="@+id/fracturedescription"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:layout_below="@id/fracturetitle"
+                        android:text="- For broken arms, legs and other bones\n- How to treat the wound and hold it in place"
+                        android:textSize="16sp"
+                        android:textStyle="italic"
+                        android:textColor="#000000"/>
+
+                </RelativeLayout>
 
 
-                <TextView
-                    android:id="@+id/burnstitle"
-                    android:layout_width="match_parent"
-                    android:background="@drawable/red_border_top"
-                    android:layout_height="wrap_content"
-                    android:text="Burns"
-                    android:textSize="35sp"
-                    android:textStyle="bold"
-                    android:textColor="#c60000"/>
-                <TextView
-                    android:id="@+id/burnsdescription"
+
+                <RelativeLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
-                    android:text="- For fire burns, chemical burns\n- How to treat the wound, and disinfect it"
-                    android:textSize="16sp"
-                    android:textStyle="italic"
-                    android:textColor="#000000"/>
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/burnstitle"
+                        android:layout_width="match_parent"
+                        android:background="@drawable/red_border_top"
+                        android:layout_height="wrap_content"
+                        android:text="Burns"
+                        android:textSize="35sp"
+                        android:textStyle="bold"
+                        android:textColor="#c60000"/>
+                    <TextView
+                        android:id="@+id/burnsdescription"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:layout_below="@id/burnstitle"
+                        android:text="- For fire burns, chemical burns\n- How to treat the wound, and disinfect it"
+                        android:textSize="16sp"
+                        android:textStyle="italic"
+                        android:textColor="#000000"/>
+
+                </RelativeLayout>
 
 
-                <TextView
-                    android:id="@+id/scrapestitle"
-                    android:layout_width="match_parent"
-                    android:background="@drawable/red_border_top"
-                    android:layout_height="wrap_content"
-                    android:text="Scrapes"
-                    android:textSize="35sp"
-                    android:textStyle="bold"
-                    android:textColor="#c60000"/>
-                <TextView
-                    android:id="@+id/scrapesdescription"
+                <RelativeLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
-                    android:text="- For fire burns, chemical burns\n- How to treat the wound, and disinfect it"
-                    android:textSize="16sp"
-                    android:textStyle="italic"
-                    android:textColor="#000000"/>
+                    android:layout_height="wrap_content">
 
-                <TextView
-                    android:id="@+id/puncturestitle"
-                    android:layout_width="match_parent"
-                    android:background="@drawable/red_border_top"
-                    android:layout_height="wrap_content"
-                    android:text="Punctures"
-                    android:textSize="35sp"
-                    android:textStyle="bold"
-                    android:textColor="#c60000"/>
-                <TextView
-                    android:id="@+id/puncturesdescription"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
-                    android:text="- For fire burns, chemical burns\n- How to treat the wound, and disinfect it"
-                    android:textSize="16sp"
-                    android:textStyle="italic"
-                    android:textColor="#000000"/>
+                    <TextView
+                        android:id="@+id/scrapestitle"
+                        android:layout_width="match_parent"
+                        android:background="@drawable/red_border_top"
+                        android:layout_height="wrap_content"
+                        android:text="Scrapes"
+                        android:textSize="35sp"
+                        android:textStyle="bold"
+                        android:textColor="#c60000"/>
+                    <TextView
+                        android:id="@+id/scrapesdescription"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:layout_below="@id/scrapestitle"
+                        android:text="- For fire burns, chemical burns\n- How to treat the wound, and disinfect it"
+                        android:textSize="16sp"
+                        android:textStyle="italic"
+                        android:textColor="#000000"/>
 
-                <TextView
-                    android:id="@+id/splinterstitle"
-                    android:layout_width="match_parent"
-                    android:background="@drawable/red_border_top"
-                    android:layout_height="wrap_content"
-                    android:text="Splinters"
-                    android:textSize="35sp"
-                    android:textStyle="bold"
-                    android:textColor="#c60000"/>
-                <TextView
-                    android:id="@+id/splintersdescription"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
-                    android:text="-"
-                    android:textSize="16sp"
-                    android:textStyle="italic"
-                    android:textColor="#000000"/>
 
-                <TextView
-                    android:id="@+id/cprtitle"
-                    android:layout_width="match_parent"
-                    android:background="@drawable/red_border_top"
-                    android:layout_height="wrap_content"
-                    android:text="Remedies"
-                    android:textSize="35sp"
-                    android:textStyle="bold"
-                    android:textColor="#c60000"/>
-                <TextView
-                    android:id="@+id/cprdescription"
+                </RelativeLayout>
+
+
+                <RelativeLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
-                    android:text="- For fire burns, chemical burns\n- How to treat the wound, and disinfect it"
-                    android:textSize="16sp"
-                    android:textStyle="italic"
-                    android:textColor="#000000"/>
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/puncturestitle"
+                        android:layout_width="match_parent"
+                        android:background="@drawable/red_border_top"
+                        android:layout_height="wrap_content"
+                        android:text="Punctures"
+                        android:textSize="35sp"
+                        android:textStyle="bold"
+                        android:textColor="#c60000"/>
+                    <TextView
+                        android:id="@+id/puncturesdescription"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:layout_below="@id/puncturestitle"
+                        android:text="- For fire burns, chemical burns\n- How to treat the wound, and disinfect it"
+                        android:textSize="16sp"
+                        android:textStyle="italic"
+                        android:textColor="#000000"/>
+
+                </RelativeLayout>
+
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/splinterstitle"
+                        android:layout_width="match_parent"
+                        android:background="@drawable/red_border_top"
+                        android:layout_height="wrap_content"
+                        android:text="Splinters"
+                        android:textSize="35sp"
+                        android:textStyle="bold"
+                        android:textColor="#c60000"/>
+                    <TextView
+                        android:id="@+id/splintersdescription"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:text="-"
+                        android:layout_below="@id/splinterstitle"
+                        android:textSize="16sp"
+                        android:textStyle="italic"
+                        android:textColor="#000000"/>
+
+                </RelativeLayout>
+
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/cprtitle"
+                        android:layout_width="match_parent"
+                        android:background="@drawable/red_border_top"
+                        android:layout_height="wrap_content"
+                        android:text="Remedies"
+                        android:textSize="35sp"
+                        android:textStyle="bold"
+                        android:textColor="#c60000"/>
+                    <TextView
+                        android:id="@+id/cprdescription"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:layout_below="@id/cprtitle"
+                        android:text="- For fire burns, chemical burns\n- How to treat the wound, and disinfect it"
+                        android:textSize="16sp"
+                        android:textStyle="italic"
+                        android:textColor="#000000"/>
+
+                </RelativeLayout>
+
 
             </LinearLayout>
 
