--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,7 +92,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:text="- For fire burns, chemical burns\n- How to treat the wound, and disinfect it"
+                    android:text="- For lit burns, chemical burns\n- How to treat the wound, and disinfect it"
                     android:textSize="16sp"
                     android:textStyle="italic"
                     android:textColor="#000000"/>
