--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,16 +32,17 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
-                    android:textStyle="bold"
+                    android:gravity="center"
                     android:text="Welcome"
                     android:textSize="58dp"
-                    android:gravity="center"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/fracturetitle"
                     android:layout_width="match_parent"
                     android:background="@drawable/red_border_top"
                     android:layout_height="wrap_content"
+                    android:onClick="openFracturesActivity"
                     android:text="Fractures"
                     android:textSize="35sp"
                     android:textStyle="bold"
@@ -52,6 +53,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
+                    android:onClick="openFracturesActivity"
                     android:text="- For broken arms, legs and other bones\n- How to treat the wound and hold it in place"
                     android:textSize="16sp"
                     android:textStyle="italic"
@@ -64,6 +66,7 @@
                     android:layout_width="match_parent"
                     android:background="@drawable/red_border_top"
                     android:layout_height="wrap_content"
+                    android:onClick="openBurnsActivity"
                     android:text="Burns"
                     android:textSize="35sp"
                     android:textStyle="bold"
@@ -73,6 +76,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
+                    android:onClick="openBurnsActivity"
                     android:text="- For fire burns, chemical burns\n- How to treat the wound, and disinfect it"
                     android:textSize="16sp"
                     android:textStyle="italic"
@@ -83,6 +87,7 @@
                     android:layout_width="match_parent"
                     android:background="@drawable/red_border_top"
                     android:layout_height="wrap_content"
+                    android:onClick="openScrapesActivity"
                     android:text="Scrapes"
                     android:textSize="35sp"
                     android:textStyle="bold"
@@ -92,7 +97,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:text="- For lit burns, chemical burns\n- How to treat the wound, and disinfect it"
+                    android:onClick="openScrapesActivity"
+                    android:text="- For a rub on a hard surface causing damage or pain\n- How to treat the wound, and disinfect it"
                     android:textSize="16sp"
                     android:textStyle="italic"
                     android:textColor="#000000"/>
@@ -104,6 +110,7 @@
                     android:layout_width="match_parent"
                     android:background="@drawable/red_border_top"
                     android:layout_height="wrap_content"
+                    android:onClick="openPuncturesActivity"
                     android:text="Punctures"
                     android:textSize="35sp"
                     android:textStyle="bold"
@@ -113,7 +120,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:text="- For fire burns, chemical burns\n- How to treat the wound, and disinfect it"
+                    android:onClick="openPuncturesActivity"
+                    android:text="- For a pierced or penetrated part of the skin\n- How to treat the wound, and disinfect it"
                     android:textSize="16sp"
                     android:textStyle="italic"
                     android:textColor="#000000"/>
@@ -125,6 +133,7 @@
                     android:layout_width="match_parent"
                     android:background="@drawable/red_border_top"
                     android:layout_height="wrap_content"
+                    android:onClick="openSplintersActivity"
                     android:text="Splinters"
                     android:textSize="35sp"
                     android:textStyle="bold"
@@ -134,28 +143,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:text="-"
-                    android:textSize="16sp"
-                    android:textStyle="italic"/>
-
-                <TextView
-                    android:id="@+id/cprtitle"
-                    android:layout_width="match_parent"
-                    android:background="@drawable/red_border_top"
-                    android:layout_height="wrap_content"
-                    android:text="Remedies"
-                    android:textSize="35sp"
-                    android:textStyle="bold"
-                    android:textColor="#c60000"/>
-                <TextView
-                    android:id="@+id/cprdescription"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
-                    android:text="- For fire burns, chemical burns\n- How to treat the wound, and disinfect it"
+                    android:onClick="openSplintersActivity"
+                    android:text="- A small, thin, sharp material penetrating the skin\n- How to treat the wound, and disinfect it"
                     android:textSize="16sp"
                     android:textStyle="italic"
                     android:textColor="#000000"/>
+
 
             </LinearLayout>
 
