--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -6,13 +6,51 @@
     android:layout_height="match_parent"
     tools:context="com.examples.android.healthcross.NewsActivity">
 
-
     <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/Drawer_Layout"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:scrollbars = "vertical"
+        android:scrollbarStyle="insideOverlay"
+        android:background="@android:color/white">
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_marginTop="15dp"
+                android:layout_gravity="center"
+                android:textColor="#c60000"
+                android:textSize="25sp"
+                android:text="TIPS"
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+
+            <ImageView
+                android:layout_marginTop="5dp"
+                android:layout_width="fill_parent"
+                android:layout_height="490dp"
+                android:src="@drawable/health_art1"/>
+
+
+            </LinearLayout>
+
+
+    </ScrollView>
+
+
 
         <android.support.design.widget.NavigationView
             android:layout_width="wrap_content"
