--- a/app/src/main/res/drawable/splash.xml
+++ b/app/src/main/res/drawable/splash.xml
@@ -3,8 +3,7 @@
     android:opacity="opaque">
     <item android:drawable="@color/colorWhite"/>
     <item>
-        <bitmap
-            android:gravity="center"
-            android:src="@drawable/logo2"/>
+        <bitmap android:src="@drawable/healthcrosslogo" />
+
     </item>
 </layer-list>
