--- a/app/src/main/res/layout/activity_fractures.xml
+++ b/app/src/main/res/layout/activity_fractures.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -20,7 +20,7 @@
 
 
             <TextView
-                android:text=""
+                android:text="injinjinjinjijnijninjijnijnijn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -37,4 +37,4 @@
 
     </android.support.v4.widget.DrawerLayout>
 
-</android.support.constraint.ConstraintLayout>
+</android.widget.RelativeLayout>
